--- a/HumbrellaAPI/HumbrellaAPI.csproj
+++ b/HumbrellaAPI/HumbrellaAPI.csproj
@@ -11,7 +11,9 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="6.2.2" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.6" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="2.3.0" />
+    <PackageReference Include="Twilio" Version="5.10.0" />
   </ItemGroup>
 
   <ItemGroup>
