--- a/HumbrellaAPI/appsettings.json
+++ b/HumbrellaAPI/appsettings.json
@@ -26,5 +26,8 @@
     "TwilioAccountSID": "ACb602fe3c7762119aa1b9062cfc3d08fe",
     "TwilioAccountTOKEN": "5da51d40a33187578ba4392af9ba49ef",
     "TwilioPhoneNumber": "+14433414777"
+  },
+  "MQTT": {
+    "MqttServer": "139.59.28.88"
   }
 }
