--- a/HumbrellaAPI/appsettings.json
+++ b/HumbrellaAPI/appsettings.json
@@ -28,6 +28,8 @@
     "TwilioPhoneNumber": "+14433414777"
   },
   "MQTT": {
-    "MqttServer": "139.59.28.88"
+    "MqttServer": "139.59.28.88",
+    "MqttPublisherTopicPrefix": "inTopicStation/",
+    "MqttSubscriberTopicPrefix": "outTopicStation/"
   }
 }
